Initial communication between server and client

--- a/client/src/app/register-tests/register-for-people-group/register-for-people-group.component.html
+++ b/client/src/app/register-tests/register-for-people-group/register-for-people-group.component.html
@@ -14,7 +14,7 @@
           </button>
         </th>
         <th>
-          <button mat-button (click)="unknownToOrigin('school')">
+          <button mat-button (click)="unknownToOrigin('SCHOOL')">
             Unbekannt -> Schule
           </button>
         </th>
