--- a/client/src/app/register-tests/select-test-result/select-test-result.component.html
+++ b/client/src/app/register-tests/select-test-result/select-test-result.component.html
@@ -1,4 +1,8 @@
-<mat-radio-group [(ngModel)]="testResult.state.result">
-  <mat-radio-button [value]="'positive'">Positiv</mat-radio-button>
-  <mat-radio-button [value]="'negative'">Negativ</mat-radio-button>
+<mat-radio-group
+  [(ngModel)]="testResult.state.result"
+  (change)="onChange($event)"
+  [disabled]="readOnly || updateInProgress"
+>
+  <mat-radio-button [value]="'POSITIVE'">Positiv</mat-radio-button>
+  <mat-radio-button [value]="'NEGATIVE'">Negativ</mat-radio-button>
 </mat-radio-group>
