--- a/client/src/app/register-tests/people-group-list/people-group-list.component.html
+++ b/client/src/app/register-tests/people-group-list/people-group-list.component.html
@@ -2,12 +2,15 @@
   <mat-card-subtitle>Schüler:innen</mat-card-subtitle>
   <mat-card-title>{{ group.name }}</mat-card-title>
   <mat-card-content>
-    <p>Insgesamt {{ group.count }} Schüler:innen.</p>
+    <p>{{ group.personCount }} Schüler:innen, {{ group.testCount }} Tests</p>
   </mat-card-content>
   <mat-divider inset></mat-divider>
   <mat-card-actions>
-    <button mat-button (click)="createTestSeries()">
+    <button *ngIf="group.testCount === 0" mat-button (click)="createTestSeries()">
       Testreihe für <strong>heute</strong> anlegen
     </button>
+    <a *ngIf="group.testCount > 0" [routerLink]="targetUrl">
+      Zur Testreihe
+    </a>
   </mat-card-actions>
 </mat-card>
