Actual deletion of tests

--- a/client/src/app/register-tests/register-for-people-group/register-for-people-group.component.html
+++ b/client/src/app/register-tests/register-for-people-group/register-for-people-group.component.html
@@ -52,7 +52,7 @@
           ></app-select-test-origin>
         </td>
         <td>
-          <button mat-button (click)="deleteTestResult(t.person.id)">
+          <button mat-button (click)="deleteTestResult(t.result.id)">
             <mat-icon>delete</mat-icon>
           </button>
         </td>
