Person & Group import via CSV

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -11,6 +11,7 @@
       <a mat-list-item [routerLink]="'/'">Hauptseite</a>
       <a mat-list-item [routerLink]="'/register-test'">Tests erfassen</a>
       <a mat-list-item [routerLink]="'/analysis'">Auswertung</a>
+      <a mat-list-item [routerLink]="'/administration'">Administration</a>
     </mat-nav-list>
   </mat-drawer>
 
