Fundamental Login working via Spring security form login

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,6 +3,9 @@
     <mat-icon>menu</mat-icon>
   </button>
   <span><a class="index" [routerLink]="'/'">Corona-Testerfassung</a></span>
+  <button mat-button (click)="login()">
+    Anmelden
+  </button>
 </mat-toolbar>
 
 <mat-drawer-container>
