Client refactoring for more or less proper login

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,9 +3,8 @@
     <mat-icon>menu</mat-icon>
   </button>
   <span><a class="index" [routerLink]="'/'">Corona-Testerfassung</a></span>
-  <button mat-button (click)="login()">
-    Anmelden
-  </button>
+  <span class="spacer"></span>
+  <app-login-state></app-login-state>
 </mat-toolbar>
 
 <mat-drawer-container>
