Code cleanup & hiding irrelevant menu options

--- a/client/src/app/register-tests/select-test-origin/select-test-origin.component.html
+++ b/client/src/app/register-tests/select-test-origin/select-test-origin.component.html
@@ -1,6 +1,6 @@
 <mat-radio-group
   [(ngModel)]="testResult.state.origin"
-  (change)="onChange($event)"
+  (change)="onChange()"
   [disabled]="readOnly || updateInProgress"
 >
   <mat-radio-button [value]="'SCHOOL'">Schule</mat-radio-button>
