--- a/client/src/app/register-tests/select-test-result/select-test-result.component.html
+++ b/client/src/app/register-tests/select-test-result/select-test-result.component.html
@@ -1,6 +1,6 @@
 <mat-radio-group
   [(ngModel)]="testResult.state.result"
-  (change)="onChange($event)"
+  (change)="onChange()"
   [disabled]="readOnly || updateInProgress"
 >
   <mat-radio-button [value]="'POSITIVE'">Positiv</mat-radio-button>
