Initial Analysis Dashboard

--- a/client/src/app/analysis/index/index.component.html
+++ b/client/src/app/analysis/index/index.component.html
@@ -3,5 +3,7 @@
 <div>
   <input matInput [matDatepicker]="picker" />
   <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-  <mat-datepicker #picker></mat-datepicker>
+  <mat-datepicker #picker [startAt]="selectedDate"></mat-datepicker>
 </div>
+
+<app-dashboard></app-dashboard>
