--- a/client/src/app/register-tests/register-for-people-group/register-for-people-group.component.html
+++ b/client/src/app/register-tests/register-for-people-group/register-for-people-group.component.html
@@ -20,7 +20,7 @@
         <th>
           <button
             mat-button
-            (click)="unknownToOrigin('SCHOOL')"
+            (click)="unknownToOrigin('LOCAL')"
             [disabled]="isDoingGlobalOperation"
           >
             Unbekannt -> Schule
