--- a/client/src/app/register-tests/select-test-origin/select-test-origin.component.html
+++ b/client/src/app/register-tests/select-test-origin/select-test-origin.component.html
@@ -3,7 +3,7 @@
   (change)="onChange()"
   [disabled]="readOnly || updateInProgress"
 >
-  <mat-radio-button [value]="'SCHOOL'">Schule</mat-radio-button>
+  <mat-radio-button [value]="'LOCAL'">Schule</mat-radio-button>
   <mat-radio-button [value]="'SELF_DISCLOSURE'"
     >Selbstauskunft</mat-radio-button
   >
