Overall calculations for recovered or vaccinated

--- a/client/src/app/administration/administration.component.html
+++ b/client/src/app/administration/administration.component.html
@@ -85,9 +85,9 @@
 <h4>Beispiel</h4>
 <p>Unten stehender Datensatz enthält die folgenden Personen</p>
 <ul>
-  <li>Albert Erster, geimpft am 1.1.2020, nicht genesen, Gruppe 1c</li>
+  <li>Albert Erster, geimpft bis 1.1.2020, nicht genesen, Gruppe 1c</li>
   <li>Berta Zweite, nicht geimpft, genesen bis 1.2.2020, Gruppe 1b</li>
-  <li>Cäsar Dritter, geimpft am 1.3.2020, genesen bis 1.4.2020, Gruppe 7a</li>
+  <li>Cäsar Dritter, geimpft bis 1.3.2020, genesen bis 1.4.2020, Gruppe 7a</li>
   <li>Erwin Letzter, nicht geimpft, nicht genesen, Gruppe 7a</li>
 </ul>
 <pre><code>
