Basis for working with tests over multiple days

--- a/client/src/app/administration/administration.component.html
+++ b/client/src/app/administration/administration.component.html
@@ -92,8 +92,8 @@
 </ul>
 <pre><code>
 firstName,lastName,vaccinated,recovered,group
-Albert,Erster,1.1.2020,,1c
-Berta,Zweite,,1.2.2020,1b
-Cäsar,Dritter,1.3.2020,1.4.2020,7a
+Albert,Erster,2020-01-01,,1c
+Berta,Zweite,,2020-02-01,1b
+Cäsar,Dritter,2020-03-01,2020-04-01,7a
 Erwin,Letzter,,,7a
 </code></pre>
