--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -4,6 +4,7 @@
   </button>
   <span><a class="index" [routerLink]="'/'">Corona-Testerfassung</a></span>
   <span class="spacer"></span>
+  <app-select-date></app-select-date>
   <app-login-state></app-login-state>
 </mat-toolbar>
 
