--- a/client/src/app/register-tests/index/index.component.html
+++ b/client/src/app/register-tests/index/index.component.html
@@ -1,3 +1,3 @@
 <div class="group-list">
-    <app-people-group-list *ngFor="let g of groups" [group]="g"></app-people-group-list>
+    <app-people-group-list *ngFor="let g of (groups$ | async)" [group]="g"></app-people-group-list>
 </div>
